Fixed sound module to use media plugin only in Android, fixed android icons, removed Mac icon from image preloading, fixed splash styling on small android tablets

--- a/src/components/splash/style.scss
+++ b/src/components/splash/style.scss
@@ -89,7 +89,7 @@ $tablet-robot-scale: 1;
     }
 
     @include breakpoint($small-tablet) {
-      transform: scale(0.9, 0.9) translate(0, 20px);
+      transform: scale(0.7, 0.7) translate(0, 160px);
     }
 
     @include breakpoint($iphone6p) {
